# fastfeedparser

./: CLAUDE.md  README.md  benchmark.py  pyproject.toml  setup.cfg
benchmark_data/: 01b5e6081cb62f3d  021a787a782817fc  0346e81559b251eb  035c1b3dcccee254  03db8affb53e2a2f  07403555c6b2ebea  08f1ee71883dbcde  0b95497ece0172a0  0c1cef22da7ddc10  0c56ade1367017c8  0dbdbb0dda62ed3f  137dd53eb3d6d860  14333881097406c7  1464cc512ecc7ddd  14dda539770f94e3  1692af1055392224  16dc10cf98d1ee82  1796df62c4a287cc  18138c717652f678  1883db9e2736546b  18d1bc71cc221963  1965bffbdba53fa6  1a2c4a5be370d054  1a5d0f741c370fc5  1a6a99410a2b58f2  1a97a3abe6bc6c97  1ab0c5cc619c3b8e  1c17c9c37207f120  1cc034d2831f54bb  1cd3201079a0015b  1d4eb9feb2d475b7  1d58ba8460bcc2d0  1e4ab389e139d659  1ee1c80e42551cd6  1f8ef9904208fed5  2404c66c65606266  25f0d733068a3446  2756591d76dda573  27d411d472a4e51a  2b2c3f5ac3d2e836  (+153 more)
src/fastfeedparser/: __init__.py  main.py
tests/: test_encoding.py  test_integration.py
tests/integration/: cgpplay.json  cgpplay.xml  davidbau.json  davidbau.xml  foolcontrol.json  foolcontrol.xml  fwrarejazzvinylcollector.json  fwrarejazzvinylcollector.xml  gamersnexus.json  gamersnexus.xml  json_feed_sample.expected.json  json_feed_sample.json  kagi.json  kagi.xml  malformed_rss_namespaced.json  malformed_rss_namespaced.xml  osm-pl.json  osm-pl.xml  osm.json  osm.xml  postgis.json  postgis.xml  pypy.json  pypy.xml  stackoverflow.json  stackoverflow.xml  utf16_encoded.json  utf16_encoded.xml  vintagehomeplans.json  vintagehomeplans.xml
