[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastfeedparser"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "High performance RSS, Atom and RDF parser in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "httpx",
    "lxml",
    "parsedatetime",
    "python-dateutil"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fastfeedparser"
"Bug Tracker" = "https://github.com/yourusername/fastfeedparser/issues"
